<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:layout_margin="0pt"
    android:layout_weight="1"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etShowNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@color/gray"
        android:ems="10"
        android:gravity="end|bottom"
        android:inputType="textPersonName"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="36sp"
        tools:ignore="LabelFor,TextFields" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|fill"
        android:gravity="bottom|start|fill">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/buttonAC"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="buttonCleanEvent"
                android:text="@string/ac"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/buttonPlusMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/positive_negative"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/buttonPercent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="buttonPercentEvent"
                android:text="@string/percent"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="OperatorEvent"
                android:text="@string/devide"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/button7"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/_7"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/button8"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/_8"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/button9"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/_9"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="OperatorEvent"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/button4"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/_4"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/button5"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/_5"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/button6"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/_6"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/buttonSubstract"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="OperatorEvent"
                android:text="@string/_minus"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <Button
                android:id="@+id/button1"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/_1"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/button2"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/_2"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/button3"
                android:layout_width="74dp"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:onClick="NumberEvent"
                android:text="@string/_3"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/buttonSum"
                android:layout_width="72dp"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="OperatorEvent"
                android:text="@string/_plus"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,TextContrastCheck" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_width="60pt"
            android:layout_height="30pt"
            android:layout_marginEnd="1pt"
            android:layout_weight="3.7"
            android:background="@color/whiteback"
            android:onClick="NumberEvent"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_marginEnd="1pt"
            android:layout_weight="1.9"
            android:background="@color/whiteback"
            android:onClick="NumberEvent"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_marginEnd="1pt"
            android:layout_weight="1.9"
            android:background="@color/orange"
            android:onClick="EqualEvent"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />
</LinearLayout>